--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -6,12 +6,11 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/ll"
+        android:id="@+id/llMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginHorizontal="@dimen/fab_padding"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -19,50 +18,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/poppins_regular"
+            android:textSize="10sp"
             android:textColor="@color/accent" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="14sp"
-            android:layout_height="14sp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="@dimen/less_padding"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
-            app:tint="?attr/colorSecondary" />
-
-        <TextView
-            android:id="@+id/tvLngToHistory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="@color/accent" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/fab_padding"
-        android:background="@drawable/bg_main_less_rounded"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/padding"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="@dimen/less_padding"
-        android:elevation="@dimen/less_padding"
-        app:layout_constraintTop_toBottomOf="@+id/ll">
 
         <TextView
             android:id="@+id/tvTextHistory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/padding_10"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
             android:text="@string/app_name"
-            android:textColor="@color/accent"
-            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/poppins_regular"
+            android:textSize="16sp"
             tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/tvLngToHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="10sp"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/accent" />
 
         <LinearLayout
             android:id="@+id/llItem"
@@ -75,9 +53,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/padding_10"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textColor="?attr/colorSecondary"
+                android:textColor="@color/black"
+                android:text="@string/app_name"
+                android:fontFamily="@font/poppins_regular"
                 android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
 
