--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -123,6 +123,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_900">#212121</color>
     <color name="gray_700">#616161</color>
+    <color name="gray_7070">#707070</color>
     <color name="gray_800">#424242</color>
     <color name="gray_600">#757575</color>
     <color name="gray_400">#BDBDBD</color>
@@ -134,7 +135,7 @@
 
     <color name="primary">#f5f6fb</color>
 
-    <color name="bg_color">#FFFFFF</color>
+    <color name="bg_color">#FFFCF8</color>
     <color name="yellow">#4285F4</color>
     <color name="disable_color">#EEEEEE</color>
     <color name="secondary_color">#f5f6fb</color>
@@ -144,6 +145,7 @@
     <color name="colorSecondary">#991e272b</color>
     <color name="line_color">#373e41</color>
     <color name="gray_300">#E0E0E0</color>
+
 
 
 </resources>
