--- a/app/src/main/res/drawable/bg_accent_border_rounded.xml
+++ b/app/src/main/res/drawable/bg_accent_border_rounded.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/accent" />
-    <corners android:radius="100dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <corners android:radius="10dp" />
+            <stroke android:color="@color/accent" android:width="1dp"/>
+        </shape>
+    </item>
+</layer-list>
