--- a/app/src/main/res/drawable/bg_pro_top_rounded.xml
+++ b/app/src/main/res/drawable/bg_pro_top_rounded.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
+    <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_color" />
-            <corners android:topRightRadius="20dp"
-                android:topLeftRadius="20dp"/>
+            <solid android:color="@color/accent" />
+            <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
+        </shape>
+    </item>
+    <item android:top="1dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
         </shape>
     </item>
 </layer-list>
