--- a/app/src/main/res/drawable/bg_translate_dashboard.xml
+++ b/app/src/main/res/drawable/bg_translate_dashboard.xml
@@ -1,19 +1,8 @@
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/gray_300"
-    tools:targetApi="lollipop">
-    <item android:id="@android:id/mask">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray_300" />
-            <corners android:radius="7sp"/>
+            <solid android:color="@color/white" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
-    <item
-        android:id="@android:id/background" >
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/gray_300"/>
-            <corners android:radius="7sp"/>
-        </shape>
-    </item>
-</ripple>
+</layer-list>
