--- a/app/src/main/res/drawable/ic_arrow_down.xml
+++ b/app/src/main/res/drawable/ic_arrow_down.xml
@@ -1,14 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="12dp"
-    android:height="7dp"
-    android:autoMirrored="true"
-    android:viewportWidth="12"
-    android:viewportHeight="7">
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
     <path
-        android:fillColor="#00000000"
-        android:pathData="M11,1L6,6L1,1"
-        android:strokeWidth="1"
-        android:strokeColor="@color/gray_600"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:fillColor="#707070"
+        android:fillType="evenOdd"
+        android:pathData="M3.195,5.695C3.456,5.435 3.878,5.435 4.138,5.695L8,9.557L11.862,5.695C12.122,5.435 12.544,5.435 12.805,5.695C13.065,5.956 13.065,6.378 12.805,6.638L8.943,10.5C8.422,11.021 7.578,11.021 7.057,10.5L3.195,6.638C2.935,6.378 2.935,5.956 3.195,5.695Z" />
 </vector>
