--- a/app/src/main/res/drawable/ic_baseline_arrow_back_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_back_24.xml
@@ -2,9 +2,11 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+      android:pathData="M10.707,17.793C11.097,18.183 11.097,18.817 10.707,19.207C10.316,19.598 9.683,19.598 9.293,19.207L3.5,13.414C2.719,12.633 2.719,11.367 3.5,10.586L9.293,4.793C9.683,4.402 10.316,4.402 10.707,4.793C11.097,5.183 11.097,5.817 10.707,6.207L5.914,11H20C20.552,11 21,11.448 21,12C21,12.552 20.552,13 20,13H5.914L10.707,17.793Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
 </vector>
