--- a/app/src/main/res/drawable/ic_baseline_share_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_share_24.xml
@@ -2,9 +2,30 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M18,16.08c-0.76,0 -1.44,0.3 -1.96,0.77L8.91,12.7c0.05,-0.23 0.09,-0.46 0.09,-0.7s-0.04,-0.47 -0.09,-0.7l7.05,-4.11c0.54,0.5 1.25,0.81 2.04,0.81 1.66,0 3,-1.34 3,-3s-1.34,-3 -3,-3 -3,1.34 -3,3c0,0.24 0.04,0.47 0.09,0.7L8.04,9.81C7.5,9.31 6.79,9 6,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3c0.79,0 1.5,-0.31 2.04,-0.81l7.12,4.16c-0.05,0.21 -0.08,0.43 -0.08,0.65 0,1.61 1.31,2.92 2.92,2.92 1.61,0 2.92,-1.31 2.92,-2.92s-1.31,-2.92 -2.92,-2.92z"/>
+      android:pathData="M13.164,7.136C13.358,7.794 13.717,8.381 14.193,8.85L10.837,10.864C10.642,10.206 10.283,9.619 9.807,9.15L13.164,7.136Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"/>
+  <path
+      android:pathData="M9.807,14.85L13.164,16.864C13.358,16.206 13.717,15.619 14.193,15.15L10.837,13.136C10.642,13.794 10.283,14.381 9.807,14.85Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"/>
+  <path
+      android:pathData="M17,8.125C18.174,8.125 19.125,7.174 19.125,6C19.125,4.826 18.174,3.875 17,3.875C15.826,3.875 14.875,4.826 14.875,6C14.875,7.174 15.826,8.125 17,8.125ZM20.875,6C20.875,8.14 19.14,9.875 17,9.875C14.86,9.875 13.125,8.14 13.125,6C13.125,3.86 14.86,2.125 17,2.125C19.14,2.125 20.875,3.86 20.875,6Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"/>
+  <path
+      android:pathData="M17,20.125C18.174,20.125 19.125,19.174 19.125,18C19.125,16.826 18.174,15.875 17,15.875C15.826,15.875 14.875,16.826 14.875,18C14.875,19.174 15.826,20.125 17,20.125ZM20.875,18C20.875,20.14 19.14,21.875 17,21.875C14.86,21.875 13.125,20.14 13.125,18C13.125,15.86 14.86,14.125 17,14.125C19.14,14.125 20.875,15.86 20.875,18Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"/>
+  <path
+      android:pathData="M7,14.125C8.174,14.125 9.125,13.174 9.125,12C9.125,10.826 8.174,9.875 7,9.875C5.826,9.875 4.875,10.826 4.875,12C4.875,13.174 5.826,14.125 7,14.125ZM10.875,12C10.875,14.14 9.14,15.875 7,15.875C4.86,15.875 3.125,14.14 3.125,12C3.125,9.86 4.86,8.125 7,8.125C9.14,8.125 10.875,9.86 10.875,12Z"
+      android:strokeWidth="0.25"
+      android:fillColor="#707070"
+      android:strokeColor="#ffffff"/>
 </vector>
