--- a/app/src/main/res/drawable/ic_speak_ic.xml
+++ b/app/src/main/res/drawable/ic_speak_ic.xml
@@ -1,21 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="19.626dp"
-    android:height="15.701dp"
-    android:viewportWidth="19.626"
-    android:viewportHeight="15.701">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M8.792,0.288l-3.638,3.637h-4.173a0.981,0.981 0,0 0,-0.981 0.981v5.888a0.981,0.981 0,0 0,0.981 0.981h4.173l3.638,3.637a0.982,0.982 0,0 0,1.675 -0.694L10.467,0.982A0.982,0.982 0,0 0,8.792 0.288ZM19.625,7.85a7.549,7.549 0,0 0,-3.507 -6.388,0.977 0.977,0 0,0 -1.354,0.305 0.993,0.993 0,0 0,0.3 1.364,5.58 5.58,0 0,1 2.6,4.719A5.58,5.58 0,0 1,15.068 12.57a0.993,0.993 0,0 0,-0.3 1.364,0.979 0.979,0 0,0 1.354,0.305A7.549,7.549 0,0 0,19.625 7.85ZM13.825,4.707a0.985,0.985 0,0 0,-1.333 0.386,0.982 0.982,0 0,0 0.386,1.333A1.631,1.631 0,0 1,13.738 7.85a1.631,1.631 0,0 1,-0.855 1.423,0.982 0.982,0 0,0 -0.386,1.333A0.983,0.983 0,0 0,13.825 10.993,3.6 3.6,0 0,0 15.701,7.85 3.594,3.594 0,0 0,13.825 4.707Z">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:startY="0.0015648502"
-          android:startX="9.813835"
-          android:endY="15.698436"
-          android:endX="9.813835"
-          android:type="linear">
-        <item android:offset="0" android:color="#FFB5B5B5"/>
-        <item android:offset="1" android:color="#FF9F9D9D"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+      android:pathData="M11,5L6,9H2V15H6L11,19V5Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#707070"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.07,4.93C20.945,6.805 21.998,9.348 21.998,12C21.998,14.652 20.945,17.195 19.07,19.07M15.54,8.46C16.477,9.398 17.004,10.669 17.004,11.995C17.004,13.321 16.477,14.592 15.54,15.53"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#707070"
+      android:strokeLineCap="round"/>
 </vector>
