--- a/app/src/main/res/layout/activity_display_history.xml
+++ b/app/src/main/res/layout/activity_display_history.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_gradient_dashboard"
+    android:background="@color/bg_color"
     tools:context="org.dslul.openboard.translator.pro.DisplayHistoryActivity">
 
     <LinearLayout
@@ -14,52 +14,52 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/llTopBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:elevation="@dimen/padding_10"
-            android:orientation="horizontal"
-            android:animateLayoutChanges="true"
-            android:paddingHorizontal="@dimen/fab_padding"
-            android:paddingTop="@dimen/padding"
-            android:paddingBottom="@dimen/padding"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:background="@drawable/bg_top_bar"
+            android:elevation="@dimen/padding">
 
-            <ImageButton
-                android:id="@+id/btnBackHistory"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                android:background="@drawable/bg_nothing_rounded_ripple"
-                android:paddingVertical="@dimen/less_padding"
-                android:paddingEnd="@dimen/less_padding"
-                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-                app:tint="?attr/colorSecondary"
-                android:contentDescription="@string/todo" />
+            <ImageView
+                android:id="@+id/btnBack"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="@dimen/fab_padding"
+                android:padding="@dimen/padding"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvTitle" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/m_padding"
+                android:layout_marginTop="@dimen/extra_padding"
+                android:layout_marginBottom="@dimen/fab_padding"
+                android:fontFamily="@font/poppins_regular"
+                android:paddingStart="@dimen/padding"
                 android:text="@string/history"
-                android:gravity="center"
-                android:textColor="?attr/colorSecondary"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/btnBack"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/btnFav"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                app:tint="?attr/colorSecondary"
-                android:background="@drawable/bg_nothing_rounded_ripple"
-                android:paddingVertical="@dimen/less_padding"
-                android:paddingStart="@dimen/less_padding"
-                app:srcCompat="@drawable/ic_baseline_favorite_24"
-                android:contentDescription="@string/todo" />
-        </LinearLayout>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="@dimen/fab_padding"
+                android:padding="@dimen/padding"
+                android:src="@drawable/ic_baseline_favorite_24"
+                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animLoading"
@@ -91,6 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:paddingTop="@dimen/padding"
+                android:layout_marginHorizontal="@dimen/fab_padding"
                 app:layout_constraintBottom_toTopOf="@+id/nativeAdFrameLayout"
                 app:layout_constraintTop_toTopOf="parent" />
 
