--- a/app/src/main/res/layout/activity_pre_splash_screen.xml
+++ b/app/src/main/res/layout/activity_pre_splash_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@drawable/bg_splash_screen"
     tools:context="org.dslul.openboard.translator.pro.PreSplashScreenActivity">
 
@@ -11,7 +12,8 @@
         android:id="@+id/clMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_48sdp"
+        android:layout_marginBottom="@dimen/_116sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -20,9 +22,10 @@
             android:layout_height="@dimen/_100sdp"
             app:srcCompat="@drawable/logo"
             app:layout_constraintEnd_toEndOf="parent"
-            android:elevation="@dimen/padding"
+            android:elevation="@dimen/less_padding"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="@dimen/fab_padding"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:background="@drawable/bg_main_less_rounded" />
 
@@ -33,6 +36,7 @@
             android:layout_margin="@dimen/padding"
             android:gravity="center"
             app:chainUseRtl="false"
+            android:visibility="gone"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +71,7 @@
             android:fontFamily="@font/gilroy_light"
             android:maxLines="2"
             android:textStyle="bold"
+            android:visibility="gone"
             android:gravity="center"
             android:textSize="@dimen/_12sdp"
             android:text="@string/a_translator_is_a_reader_an_interpreter_and_a_creator_all_in_one"
@@ -79,13 +84,12 @@
     <FrameLayout
         android:id="@+id/nativeAdFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/fab_padding"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/fab_padding"
         android:background="@drawable/bg_native_ad"
         android:elevation="2dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/spline"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/spline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clMain" />
@@ -109,14 +113,15 @@
         android:id="@+id/btnStart"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_margin="@dimen/fab_padding"
+        android:layout_marginBottom="@dimen/fab_padding"
+        android:layout_marginHorizontal="@dimen/extra_padding"
         android:visibility="invisible"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/accent"
         android:elevation="@dimen/fab_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/bg_main_less_rounded">
+        android:background="@drawable/bg_main_rounded">
 
         <TextView
             android:id="@+id/tvStart"
