--- a/app/src/main/res/layout/admob_small_native_ad_hctr.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_hctr.xml
@@ -16,74 +16,67 @@
             android:id="@+id/ad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Ad"
-            android:paddingVertical="@dimen/_2sdp"
-            android:paddingHorizontal="@dimen/padding"
-            android:backgroundTint="@color/accent"
             android:background="@drawable/bg_cl_remove_ads"
-            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/accent"
+            android:paddingHorizontal="@dimen/padding"
+            android:paddingVertical="@dimen/_2sdp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="AD"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/top"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/extra_padding"
-            android:paddingTop="@dimen/padding"
+            android:layout_marginHorizontal="@dimen/m_padding"
+            android:layout_marginTop="@dimen/m_padding"
+            app:layout_constraintEnd_toStartOf="@+id/ad"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ad">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ad_app_icon"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:src="@drawable/logo"
                 android:adjustViewBounds="true"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@drawable/logo"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/lessRoundedCorners" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
+                android:id="@+id/ad_headline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/ad_app_icon"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginStart="@dimen/padding"
+                android:fontFamily="@font/poppins_regular"
+                android:maxLines="1"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/ad_app_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
+                app:layout_constraintTop_toTopOf="@+id/ad_app_icon" />
 
-                <TextView
-                    android:id="@+id/ad_headline"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/padding"
-                    android:maxLines="1"
-                    android:text="@string/app_name"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/ad_body"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/padding"
-                    android:lines="1"
-                    android:layout_marginTop="@dimen/padding"
-                    android:text="@string/appbar_scrolling_view_behavior"
-                    android:textColor="@color/gray_700"
-                    android:textSize="12sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/ad_headline" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/ad_body"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/padding"
+                android:layout_marginTop="@dimen/padding"
+                android:fontFamily="@font/poppins_regular"
+                android:lines="2"
+                android:text="@string/appbar_scrolling_view_behavior"
+                android:textColor="@color/gray_700"
+                android:textSize="11sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ad_app_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -94,12 +87,13 @@
             android:layout_marginHorizontal="@dimen/fab_padding"
             android:layout_marginVertical="@dimen/padding"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/ad_call_to_action"
-                android:layout_width="match_parent"
+                android:layout_width="@dimen/_100sdp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_rounded"
                 android:backgroundTint="@color/accent"
@@ -107,8 +101,8 @@
                 android:paddingVertical="@dimen/padding_10"
                 android:text="Install"
                 android:textColor="@color/btnTextColor"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="12sp"
+                android:fontFamily="@font/poppins_semi_bold" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
