--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/btnTranslate"
-        android:icon="@drawable/ic_translate_selector"
+        android:icon="@drawable/ic_home"
         android:title="Translate" />
 
     <item
