--- a/app/src/main/res/values/themes-common.xml
+++ b/app/src/main/res/values/themes-common.xml
@@ -246,7 +246,7 @@
         <item name="colorSecondary">@color/gray_700</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorSecondaryVariant">@color/gray_700</item>
-        <item name="android:windowLightStatusBar" >true</item>
+<!--        <item name="android:windowLightStatusBar" >true</item>-->
         <item name="android:statusBarColor" >@color/white</item>
 
         <!-- Customize your theme here. -->
@@ -279,6 +279,12 @@
     <style name="RatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">#B5C1F3</item>
         <item name="colorControlActivated">@color/accent</item>
+    </style>
+
+    <!-- res/values/styles.xml -->
+    <style name="BottomNavigationText" parent="TextAppearance.AppCompat">
+        <item name="android:fontFamily">@font/poppins_semi_bold</item>
+        <item name="android:textSize">10sp</item> <!-- Adjust text size if needed -->
     </style>
 
 </resources>
